--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "author": "Nikita Volkov <nikita.y.volkov@mail.ru> (http://www.flipart.ru)",
   "name": "FuellSys",
-  "description": "",
-  "keywords": ["fuell", "path", "filesystem", "environment", "system"],
-  "version": "0.1.1",
+  "description": "Fuell library extension of system utilities for node.js",
+  "keywords": ["fuell", "path", "directory", "folder", "filesystem", "environment", "system"],
+  "version": "0.1.2",
   "homepage": null,
   "repository": {
     "type": "git",
-    "url": null
+    "url": "http://github.com/nikita-volkov/FuellSys"
   },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://raw.github.com/nikita-volkov/FuellSys/master/LICENSE"
+    }
+  ],
   "main": "lib/FuellSys.js",
   "directories": {
     "lib": "lib"
@@ -17,9 +23,10 @@
     "test": "jasmine-node spec --coffee"
   },
   "dependencies": {
-    "Fuell": "0.1.3"
+    "Fuell": "0.2.x"
   },
   "devDependencies": {
-    "jasmine-node": "1.0.20"
+    "jasmine-node": "1.0.20",
+    "coffee-script": "1.3.x"
   }
 }
